<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkGrey"
    tools:context="com.charliealbright.circleprogressbarexample.MultiActivity">

    <LinearLayout
        android:id="@+id/multi_circleprogressbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <com.charliealbright.circleprogressbar.CircleProgressBar
            android:id="@+id/multi_circleprogressbar_carb"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:trackAlpha="0.5"
            app:progressColor="@color/green"
            app:max="1000"/>
        <com.charliealbright.circleprogressbar.CircleProgressBar
            android:id="@+id/multi_circleprogressbar_protein"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:trackAlpha="0.5"
            app:progressColor="@color/blue"
            app:max="1000"/>

    </LinearLayout>

    <com.charliealbright.circleprogressbar.CircleProgressBar
        android:id="@+id/multi_circleprogressbar_fat"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/multi_circleprogressbar_container"
        android:layout_marginTop="-21dp"
        android:layout_centerHorizontal="true"
        app:trackAlpha="0.5"
        app:progressColor="@color/yellow"
        app:max="1000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/multi_circleprogressbar_container"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/multi_textview_carb_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:text="@string/multi_carbs_label"/>

            <TextView
                android:id="@+id/multi_textview_carb_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="30sp"
                android:textColor="@color/green"
                android:text="@string/multi_carbs_value"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/multi_textview_protein_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:text="@string/multi_proteins_label"/>

            <TextView
                android:id="@+id/multi_textview_protein_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="30sp"
                android:textColor="@color/blue"
                android:text="@string/multi_proteins_value"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@id/multi_circleprogressbar_fat"
        android:layout_alignStart="@id/multi_circleprogressbar_fat">

        <TextView
            android:id="@+id/multi_textview_fat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:text="@string/multi_fats_label"/>

        <TextView
            android:id="@+id/multi_textview_fat_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:textColor="@color/yellow"
            android:text="@string/multi_fats_value"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/multi_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/multi_circleprogressbar_fat"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/screen3_text"/>

    <LinearLayout
        android:id="@+id/multi_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_below="@id/multi_text_view"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/multi_button_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/multi_button_github" />

        <Button
            android:id="@+id/multi_button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/multi_button_exit" />

    </LinearLayout>

</RelativeLayout>
